# keep_active

./: README.md  main.py  pyproject.toml
keep_active/: __init__.py  config.py  controller.py  mouse.py  snippets.py
tests/: __init__.py  test_config.py  test_controller.py  test_mouse.py
